add new website from server na

--- a/xem-phim-bo/cong-anh-ma-chay/index.html
+++ b/xem-phim-bo/cong-anh-ma-chay/index.html
@@ -1199,7 +1199,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             7
+             8
             </dd>
             <br/>
            </dl>
@@ -1767,18 +1767,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/muon-sung-suong-hay-goi" title="Muốn Sung Sướng, Hãy Gọi…">
+          <a class="list-top-movie-link" href="/phim-moi/whindersson-nunes-xuong-tho-giang-dao" title="Whindersson Nunes: Xướng thơ giảng đạo">
            <span class="status">
-            Vietsub - HD Vietsub
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/muon-sung-suong-hay-goi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/whindersson-nunes-xuong-tho-giang-dao-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Muốn Sung Sướng, Hãy Gọi…
+             Whindersson Nunes: Xướng thơ giảng đạo
             </span>
             <span class="list-top-movie-item-en">
-             For a Good Time, Call...
+             Whindersson Nunes: Preaching to the Choir
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/ngach-do-hanh-phuc" title="Ngạch Độ Hạnh Phúc">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngach-do-hanh-phuc-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Ngạch Độ Hạnh Phúc
+            </span>
+            <span class="list-top-movie-item-en">
+             Love on Credit
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1789,18 +1811,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/song-exploder-cau-chuyen-giai-dieu-phan-2" title="Song Exploder: Câu chuyện giai điệu (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/trung-khoi-chi-cuc-hai-thinh-loi-2" title="Trùng Khởi Chi Cực Hải Thính Lôi 2">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/song-exploder-cau-chuyen-giai-dieu-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/trung-khoi-chi-cuc-hai-thinh-loi-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Song Exploder: Câu chuyện giai điệu (Phần 2)
+             Trùng Khởi Chi Cực Hải Thính Lôi 2
             </span>
             <span class="list-top-movie-item-en">
-             Song Exploder (Season 2)
+             Reunion: The Sound of the Providence Season 2
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/phieu-du-dai-duong-den-gap-em" title="Phiêu du đại dương đến gặp em">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phieu-du-dai-duong-den-gap-em-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Phiêu du đại dương đến gặp em
+            </span>
+            <span class="list-top-movie-item-en">
+             We are Meant to Meet
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1811,65 +1855,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tam-sinh-tam-the-cham-thuong-thu" title="Tam Sinh Tam Thế Chẩm Thượng Thư">
+          <a class="list-top-movie-link" href="/phim-moi/cua-hang-sat-thu" title="Cửa Hàng Sát Thủ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tam-sinh-tam-the-cham-thuong-thu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cua-hang-sat-thu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tam Sinh Tam Thế Chẩm Thượng Thư
+             Cửa Hàng Sát Thủ
             </span>
             <span class="list-top-movie-item-en">
-             Eternal Love of Dream
+             A Shop for Killers
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hinh-bong-cua-toi" title="Hình Bóng Của Tôi">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hinh-bong-cua-toi-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Hình Bóng Của Tôi
-            </span>
-            <span class="list-top-movie-item-en">
-             Reflection of You
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hoang-quyen-phan-1" title="Hoàng quyền (Phần 1)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoang-quyen-phan-1-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Hoàng quyền (Phần 1)
-            </span>
-            <span class="list-top-movie-item-en">
-             The Crown (Season 1)
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
