--- a/xem-phim-bo/tham-tu-lung-danh-conan/index.html
+++ b/xem-phim-bo/tham-tu-lung-danh-conan/index.html
@@ -1197,7 +1197,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             36
+             37
             </dd>
             <br/>
            </dl>
@@ -1667,18 +1667,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/luc-luong-dac-biet-moe-girl" title="Lực lượng đặc biệt Moe Girl">
+          <a class="list-top-movie-link" href="/phim-moi/bay-giay" title="Bảy giây">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/luc-luong-dac-biet-moe-girl-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bay-giay-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Lực lượng đặc biệt Moe Girl
+             Bảy giây
             </span>
             <span class="list-top-movie-item-en">
-             Comic Girl Squad
+             Seven Seconds
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1689,18 +1689,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/quan-the-vu-tru" title="Quần Thể Vũ Trụ">
+          <a class="list-top-movie-link" href="/phim-moi/dao-dau-lau" title="Đảo Đầu lâu">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/quan-the-vu-tru-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dao-dau-lau-2023-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Quần Thể Vũ Trụ
+             Đảo Đầu lâu
             </span>
             <span class="list-top-movie-item-en">
-             Invisible Alien
+             Skull Island
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1711,18 +1711,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/in-your-eyes" title="In Your Eyes">
+          <a class="list-top-movie-link" href="/phim-moi/nhung-ke-lam-bac-gia" title="Những Kẻ Làm Bạc Giả">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/in-your-eyes-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-ke-lam-bac-gia-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             In Your Eyes
+             Những Kẻ Làm Bạc Giả
             </span>
             <span class="list-top-movie-item-en">
-             In Your Eyes
+             The Counterfeiters
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/uoc-nguyen-cuoi-doi" title="Ước Nguyện Cuối Đời">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/uoc-nguyen-cuoi-doi-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Ước Nguyện Cuối Đời
+            </span>
+            <span class="list-top-movie-item-en">
+             Ways to Live Forever
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1733,43 +1755,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/the-ga-y-nu" title="Thế Gả Y Nữ">
+          <a class="list-top-movie-link" href="/phim-moi/buoc-chay-thanh-xuan" title="Bước chạy thanh xuân">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-ga-y-nu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/buoc-chay-thanh-xuan-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thế Gả Y Nữ
+             Bước chạy thanh xuân
             </span>
             <span class="list-top-movie-item-en">
-             For Married Doctress
+             Kaze ga Tsuyoku Fuiteiru Kazetsuyo
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ngoi-nha-nho-tren-thao-nguyen-phan-1" title="Ngôi Nhà Nhỏ Trên Thảo Nguyên (Phần 1)">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngoi-nha-nho-tren-thao-nguyen-phan-1-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Ngôi Nhà Nhỏ Trên Thảo Nguyên (Phần 1)
-            </span>
-            <span class="list-top-movie-item-en">
-             Little House on the Prairie (Season 1)
-            </span>
-            <span class="list-top-movie-item-view">
-             5 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
