add new website from server na

--- a/xem-phim-bo/pham-nhan-tu-tien/index.html
+++ b/xem-phim-bo/pham-nhan-tu-tien/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             7
+             8
             </dd>
             <br/>
            </dl>
@@ -1661,62 +1661,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/scooby-doo-and-krypto-too" title="Scooby-Doo! And Krypto, Too!">
+          <a class="list-top-movie-link" href="/phim-moi/giai-ma-tien-te" title="Giải mã tiền tệ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/scooby-doo-and-krypto-too-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giai-ma-tien-te-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Scooby-Doo! And Krypto, Too!
+             Giải mã tiền tệ
             </span>
             <span class="list-top-movie-item-en">
-             Scooby-Doo! And Krypto, Too!
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/le-tot-nghiep-cua-ban-toi" title="Lễ Tốt Nghiệp Của Bạn Tôi">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/le-tot-nghiep-cua-ban-toi-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Lễ Tốt Nghiệp Của Bạn Tôi
-            </span>
-            <span class="list-top-movie-item-en">
-             My Friend’s Graduation Ceremony
-            </span>
-            <span class="list-top-movie-item-view">
-             0 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tham-tu-sugar" title="Thám Tử Sugar">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tham-tu-sugar-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Thám Tử Sugar
-            </span>
-            <span class="list-top-movie-item-en">
-             Sugar
+             Money, Explained
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1727,18 +1683,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/given-khoi-day-dam-me-ban-dien-anh" title="GIVEN- Khơi Dậy Đam Mê (Bản Điện Ảnh)">
+          <a class="list-top-movie-link" href="/phim-moi/qua-bom-hen-gio" title="Quả Bom Hẹn Giờ">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/given-khoi-day-dam-me-ban-dien-anh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/qua-bom-hen-gio-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             GIVEN- Khơi Dậy Đam Mê (Bản Điện Ảnh)
+             Quả Bom Hẹn Giờ
             </span>
             <span class="list-top-movie-item-en">
-             Given The Movie
+             Double Echo
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/thien-kim-kho-tranh" title="Thiên Kim Khó Tránh">
+           <span class="status">
+            HD Vietsub + Thuyết Minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thien-kim-kho-tranh-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thiên Kim Khó Tránh
+            </span>
+            <span class="list-top-movie-item-en">
+             Decreed by Fate
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1749,21 +1727,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/the-idolmster-movie-kagayaki-no-mukougawa-e" title="The iDOLM@STER Movie: Kagayaki no Mukougawa e!">
+          <a class="list-top-movie-link" href="/phim-moi/nhung-co-nang-mong-mo" title="Những Cô Nàng Mộng Mơ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-idolmster-movie-kagayaki-no-mukougawa-e-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-co-nang-mong-mo-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             The iDOLM@STER Movie: Kagayaki no Mukougawa e!
+             Những Cô Nàng Mộng Mơ
             </span>
             <span class="list-top-movie-item-en">
-             The idol master theater version is facing the glorious shore!
+             So Awkward 1-6
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/dang-hinh-thanh-am" title="Dáng Hình Thanh Âm">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dang-hinh-thanh-am-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Dáng Hình Thanh Âm
+            </span>
+            <span class="list-top-movie-item-en">
+             A Silent Voice
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
