add new website from server na

--- a/xem-phim-bo/than-vo-thien-ton/index.html
+++ b/xem-phim-bo/than-vo-thien-ton/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1661,18 +1661,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tien-len-nao-xe-nho-trai-he" title="Tiến lên nào Xe Nhỏ! Trại hè">
+          <a class="list-top-movie-link" href="/phim-moi/giao-su-ji-i" title="Giáo sư Ji I">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tien-len-nao-xe-nho-trai-he-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giao-su-ji-i-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tiến lên nào Xe Nhỏ! Trại hè
+             Giáo sư Ji I
             </span>
             <span class="list-top-movie-item-en">
-             A Go! Go! Cory Carson Summer Camp
+             Professor Ji I
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1683,40 +1683,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bat-coc-2" title="Bắt Cóc">
+          <a class="list-top-movie-link" href="/phim-moi/mat-danh-k2" title="Mật danh K2">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bat-coc-2017-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mat-danh-k2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bắt Cóc
+             Mật danh K2
             </span>
             <span class="list-top-movie-item-en">
-             My Baby Is Gone!
-            </span>
-            <span class="list-top-movie-item-view">
-             5 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cat-xeo" title="Cắt Xẻo">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cat-xeo-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Cắt Xẻo
-            </span>
-            <span class="list-top-movie-item-en">
-             Excision
+             The K2
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1727,21 +1705,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/spirit-chu-ngua-bat-kham" title="Spirit: Chú ngựa bất kham">
+          <a class="list-top-movie-link" href="/phim-moi/quy-co-thich-mot-minh" title="Quý Cô Thích Một Mình">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/spirit-chu-ngua-bat-kham-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/quy-co-thich-mot-minh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Spirit: Chú ngựa bất kham
+             Quý Cô Thích Một Mình
             </span>
             <span class="list-top-movie-item-en">
-             Spirit Untamed
+             Individualist Ms. Ji Young
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1749,18 +1727,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hon-nhan-tinh-diem" title="Hôn nhân tính điểm">
+          <a class="list-top-movie-link" href="/phim-moi/nhung-co-nang-gilmore-phan-4" title="Những cô nàng Gilmore (Phần 4)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hon-nhan-tinh-diem-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-co-nang-gilmore-phan-4-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hôn nhân tính điểm
+             Những cô nàng Gilmore (Phần 4)
             </span>
             <span class="list-top-movie-item-en">
-             The Marriage App
+             Gilmore Girls (Season 4)
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/van-phong-thuyet-am-muu" title="Văn phòng thuyết âm mưu">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/van-phong-thuyet-am-muu-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Văn phòng thuyết âm mưu
+            </span>
+            <span class="list-top-movie-item-en">
+             Inside Job
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
