add new website from server na

--- a/xem-phim-bo/ve-dep-dich-thuc/index.html
+++ b/xem-phim-bo/ve-dep-dich-thuc/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1716,18 +1716,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tay-dua-huyen-thoai" title="Tay Đua Huyền Thoại">
+          <a class="list-top-movie-link" href="/phim-moi/doi-hat-trung-hoc-3" title="Đội Hát Trung Học 3">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tay-dua-huyen-thoai-2007-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doi-hat-trung-hoc-3-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tay Đua Huyền Thoại
+             Đội Hát Trung Học 3
             </span>
             <span class="list-top-movie-item-en">
-             Ta Ra Rum Pum
+             Glee - Season 3
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1738,40 +1738,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ninh-an-nhu-mong" title="Ninh An Như Mộng">
+          <a class="list-top-movie-link" href="/phim-moi/sieu-trom" title="Siêu Trộm">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ninh-an-nhu-mong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sieu-trom-2021-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ninh An Như Mộng
+             Siêu Trộm
             </span>
             <span class="list-top-movie-item-en">
-             Story of Kunning Palace
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tinh-yeu-khong-co-loi-loi-do-nguoi-da-doi-thay" title="Tình Yêu Không Có Lỗi, Lỗi Do Người Đã Đổi Thay">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-yeu-khong-co-loi-loi-do-nguoi-da-doi-thay-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Tình Yêu Không Có Lỗi, Lỗi Do Người Đã Đổi Thay
-            </span>
-            <span class="list-top-movie-item-en">
-             Club Friday - The Series 6: Changed
+             Way Down
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1782,18 +1760,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/shanghai" title="Shanghai">
+          <a class="list-top-movie-link" href="/phim-moi/tap-lam-nguoi-xau-phan-5" title="Tập làm người xấu (Phần 5)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/shanghai-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tap-lam-nguoi-xau-phan-5-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Shanghai
+             Tập làm người xấu (Phần 5)
             </span>
             <span class="list-top-movie-item-en">
-             Shanghai
+             Breaking Bad (Season 5)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1804,21 +1782,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mat-troi-chim-day-bien-nhung-nguoi-mang-hy-vong" title="Mặt trời chìm đáy biển: Những người mang hy vọng">
+          <a class="list-top-movie-link" href="/phim-moi/dam-con-hu-don" title="Đám con hư đốn">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mat-troi-chim-day-bien-nhung-nguoi-mang-hy-vong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dam-con-hu-don-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Mặt trời chìm đáy biển: Những người mang hy vọng
+             Đám con hư đốn
             </span>
             <span class="list-top-movie-item-en">
-             JAPAN SINKS: People of Hope
+             Spoiled Brats
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/benny-va-joon" title="BENNY VÀ JOON">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/benny-va-joon-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             BENNY VÀ JOON
+            </span>
+            <span class="list-top-movie-item-en">
+             Benny &amp; Joon
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
