add new website from server na

--- a/xem-phim-moi/vung-dat-linh-hon/index.html
+++ b/xem-phim-moi/vung-dat-linh-hon/index.html
@@ -1183,7 +1183,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             7
+             8
             </dd>
             <br/>
            </dl>
@@ -1686,21 +1686,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhung-dieu-tot-dep" title="Những Điều Tốt Đẹp">
+          <a class="list-top-movie-link" href="/phim-moi/ngan-loi-noi-doi" title="Ngàn Lời Nói Dối">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-dieu-tot-dep-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngan-loi-noi-doi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Những Điều Tốt Đẹp
+             Ngàn Lời Nói Dối
             </span>
             <span class="list-top-movie-item-en">
-             All Good Things
+             Lies of Lies
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1708,21 +1708,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/springsteen-tren-san-khau" title="Springsteen Trên Sân Khấu">
+          <a class="list-top-movie-link" href="/phim-moi/last-the-night" title="Last the Night">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/springsteen-tren-san-khau-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/last-the-night-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Springsteen Trên Sân Khấu
+             Last the Night
             </span>
             <span class="list-top-movie-item-en">
-             Springsteen On Broadway
+             Last the Night
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1730,21 +1730,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/sieu-nhien-phan-5" title="Siêu Nhiên (Phần 5)">
+          <a class="list-top-movie-link" href="/phim-moi/phi-vu-trieu-do-tu-tokyo-den-berlin-phan-2" title="Phi vụ triệu đô: Từ Tokyo đến Berlin (Phần 2)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sieu-nhien-phan-5-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phi-vu-trieu-do-tu-tokyo-den-berlin-phan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Siêu Nhiên (Phần 5)
+             Phi vụ triệu đô: Từ Tokyo đến Berlin (Phần 2)
             </span>
             <span class="list-top-movie-item-en">
-             Supernatural (Season 5)
+             Money Heist: From Tokyo to Berlin (Season 2)
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1752,21 +1752,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/pho-fear-phan-2-1978" title="Phố Fear phần 2: 1978">
+          <a class="list-top-movie-link" href="/phim-moi/co-be-hawa" title="Cô Bé Hawa">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/pho-fear-phan-2-1978-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-be-hawa-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Phố Fear phần 2: 1978
+             Cô Bé Hawa
             </span>
             <span class="list-top-movie-item-en">
-             Fear Street Part 2: 1978
+             Hawa
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1774,21 +1774,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuoc-chien-chen-thanh-chien-tuyen-ma-thu-tuyet-doi-babylonia" title="Cuộc chiến Chén Thánh: Chiến tuyến ma thú tuyệt đối – Babylonia">
+          <a class="list-top-movie-link" href="/phim-moi/thanh-thoi-gian" title="Thành Thời Gian">
            <span class="status">
-            HD Vietsub
+            Vietsub - HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-chien-chen-thanh-chien-tuyen-ma-thu-tuyet-doi-babylonia-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thanh-thoi-gian-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cuộc chiến Chén Thánh: Chiến tuyến ma thú tuyệt đối – Babylonia
+             Thành Thời Gian
             </span>
             <span class="list-top-movie-item-en">
-             Fate/Grand Order Absolute Demonic Front: Babylonia
+             Castle in the Time
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
